<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDF0F3"
    android:orientation="vertical"

    tools:context=".Detalle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/tvDetalle"
        android:text="@string/tvDetalle"
        android:textSize="@dimen/dtvTitulo"
        android:gravity="center"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top"
            android:text="@string/tvNombre"
            android:textStyle="bold"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <TextView
            android:id="@+id/tvlFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvlFecha"
            android:textStyle="bold"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:text="@string/tvFecha"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <TextView
            android:id="@+id/tvlTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tvlTelefono"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:text="@string/tvTelefono"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <TextView
            android:id="@+id/tvlEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tvlEmail"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:text="@string/tvEmail"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <TextView
            android:id="@+id/tvlDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tvlDescripcion"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:text="@string/tvDescripcion"
            android:textSize="@dimen/dtvDetalles"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:onClick="regresarAtras"
            android:layout_marginTop="@dimen/top"

            android:text="Editar Datos" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>